Fixed pixel errors on mobile menu page display

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -112,6 +112,10 @@ a {
 /*Grid Menu section ends*/
 
 /*Menu Page Starts*/
+#menu-body {
+  background-color: $black;
+}
+
 //Button styles
 .btn {
   position: relative;
@@ -164,6 +168,7 @@ a {
 
 .menu-grid .menu-intro {
   width: 50%;
+  background-color: $black;
 
   h2 {
     margin-top: 20%;
@@ -228,6 +233,7 @@ a {
   grid-gap: 3rem;
   padding-top: 5rem;
   padding-bottom: 5rem;
+  background-color: $black;
 
   .price-info {
     font-size: 1.5 rem;
@@ -348,7 +354,19 @@ footer {
 
 /*Media Queries*/
 // Menu Page Queries
-@media screen and (min-width: 360px) {
+@media screen and (max-width: 600px) {
   .menu-grid {
+    flex-direction: column-reverse;
+    max-height: 200vh;
+
+    .menu-intro {
+      width: 100%;
+      height: 80vh;
+    }
+
+    .menu-picture {
+      width: 100%;
+      height: 60vh;
+    }
   }
 }
